--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -2,38 +2,53 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import 'custom';
 
-//Customisation des du header
+//Customisation du header
 header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 90px;
-  z-index: 100;
+  z-index: 1050;
   padding: 8px;
-  background-color: $dark;
-  border-radius: 2rem;
 }
 
+//Navbar 
+.navbar {
+  border-radius: 12px;
+  background-color: $dark;
+}
+.navbar-collapse {
+  background-color: $dark;
+  border-radius: 0 0 12px 12px;
+  width: 100%;
+  padding: 1rem;
+  z-index: 1040;
+}
+.navbar-nav {
+  list-style: none;
+  margin-left: auto;
+}
+.nav-link {
+  font-size: 2rem;
+  color: $secondary;
+  padding-right: auto;
+}
+//Navbar Mobile
 @media (max-width: 576px) {
   .navbar-collapse {
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-    z-index: 99;
-    background-color: $dark;
     padding: 1rem;
   }
-
-  .navbar-collapse ul.navbar-nav {
-    background-color: inherit;
-  }
-
-  .navbar-collapse li.nav-item {
-    padding-bottom: 1rem;
-  }
+  .navbar-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
 }
-
+.nav-link {
+  font-size: 1rem;
+}
+}
 
 //Postionnement du footer 
 footer {
@@ -48,7 +63,13 @@ footer {
 
 //Customisation du body
 body {
-  padding: 100px 2% 100px 2%;
+  padding: 120px 2% 100px 2%;
+  background-color: $black;
+}
+@media (max-width: 576px) {
+  body {
+    padding: 80px 2% 100px ;
+  }
 }
 
 //Customisation des blocs
@@ -74,11 +95,6 @@ body {
   object-fit: cover;
 }
 
-// Carousel Contact
-#carouselExampleContact .carousel-inner {
-  width: 80vh;
-}
-
 //Customisation de la liste d'évènements
 .event-list {
   font-size: 1.2rem;
@@ -100,4 +116,3 @@ body {
 #commentsList {
   background-color: $black;
 }
-
