suppression ou changement des placeholder

--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -12066,6 +12066,39 @@ body {
      object-fit: cover;
 }
 
+#eventCarousel .carousel-inner {
+  height: auto;
+  min-height: 400px;
+}
+
+#eventCarousel .carousel-item {
+  height: auto;
+  min-height: 400px;
+}
+
+@media (max-width: 576px) {
+  #eventCarousel .carousel-inner {
+    min-height: 600px;
+  }
+  #eventCarousel .carousel-item {
+    min-height: 600px;
+  }
+  #eventCarousel .event-carousel-item .row {
+    flex-direction: column;
+    height: auto;
+  }
+  #eventCarousel .event-carousel-img {
+    max-height: 250px;
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  #eventCarousel .event-carousel-text-col {
+    margin-top: 1rem;
+    padding: 1rem;
+    border-radius: 1rem;
+  }
+}
 .event-list {
   font-size: 1.2rem;
   text-align: center;
