--- a/public/scss/_custom.scss
+++ b/public/scss/_custom.scss
@@ -99,10 +99,10 @@ $navbar-dark-icon-color: $secondary;
 }
 
 // Styles pour le tableau des participations dans monProfil
-.participations-table {
+.participations-table, .organized-events-table {
     width: 100%;
     
-    .event-list {
+    .event-list, .organized-events-list {
         width: 100%;
         padding: 0;
         margin: 0;
@@ -130,7 +130,7 @@ $navbar-dark-icon-color: $secondary;
                 margin: 0;
                 width: 100%;
                 
-                .col-md-3, .col-md-2 {
+                .col-md-3, .col-md-2, .col-md-4 {
                     padding-left: 15px;
                     padding-right: 15px;
                 }
@@ -155,17 +155,23 @@ $navbar-dark-icon-color: $secondary;
                 color: rgba(255, 255, 255, 0.6) !important;
                 font-size: 0.85rem;
             }
+            
+            .btn {
+                font-size: 0.75rem;
+                padding: 0.25rem 0.5rem;
+            }
         }
     }
 }
 
 // Responsive pour mobile
 @media (max-width: 768px) {
-    .participations-table .event-list li {
+    .participations-table .event-list li, 
+    .organized-events-table .organized-events-list li {
         .row {
             flex-direction: column;
             
-            .col-md-3, .col-md-2 {
+            .col-md-3, .col-md-2, .col-md-4 {
                 max-width: 100%;
                 margin-bottom: 0.5rem;
                 
