"Améliorer l'affichage des résultats de recherche d'événements en format tableau
- Modifier rechercheEvenements.js pour afficher les résultats dans un format de tableau avec colonnes
- Ajouter les en-têtes de colonnes : Titre, Dates, Participants, Organisateur
- Étendre les styles CSS pour inclure la classe .events-table
- Améliorer la présentation avec badges et formatage cohérent avec monProfil

--- a/public/scss/_custom.scss
+++ b/public/scss/_custom.scss
@@ -99,7 +99,7 @@ $navbar-dark-icon-color: $secondary;
 }
 
 // Styles pour le tableau des participations dans monProfil
-.participations-table, .organized-events-table {
+.participations-table, .organized-events-table, .events-table {
     width: 100%;
     
     .event-list, .organized-events-list {
@@ -167,7 +167,8 @@ $navbar-dark-icon-color: $secondary;
 // Responsive pour mobile
 @media (max-width: 768px) {
     .participations-table .event-list li, 
-    .organized-events-table .organized-events-list li {
+    .organized-events-table .organized-events-list li,
+    .events-table .event-list li {
         .row {
             flex-direction: column;
             
