--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -12273,8 +12273,7 @@ body {
 
 .event-in-list {
   padding: 4px 8px;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
 }
 
 #commentsList {
